roles/k8s-prometheus/files/blackbox-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  selector:
    app: blackbox-exporter
  ports:
    - protocol: TCP
      port: 9115
      targetPort: 9115
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:v0.18.0
        ports:
        - containerPort: 9115
        volumeMounts:
          - name: config-volume
            mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: blackbox-exporter-config
---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: icmp-target
#  namespace: monitoring
#data:
#  icmp-target.yml: |
#    - targets:
#        - '192.168.0.14'
#        - '192.168.0.15'
#        - '192.168.0.16'
